<resources>
    <string name="app_name">Shoppe</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnytime</string>
    <string name="quality">It is now very easy to reach the\nbest quality among all the\nproducts on the Internet!</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_login">Let\'s Login</string>
    <string name="have_no_account">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="let_register">Let\'s Register</string>
    <string name="have_account">Do you have an account? Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="wrong_format_format">Wrong format</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_should_contains_6_char">Password should contains 6 char</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_message">We will send you the password link to your email!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
</resources>